tests/specs/ecosystem/medv/finder/3_2_0.test
medv/finder/3.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'Element'.
  root: Element;
        ~~~~~~~
    at file://<tmpdir>/finder.ts:2:9

TS2304 [ERROR]: Cannot find name 'Element'.
export function finder(input: Element, options?: Partial<Options>): string {
                              ~~~~~~~
    at file://<tmpdir>/finder.ts:13:31

Found 2 errors.

error: Type checking failed.

